samples/_failures_safe/1760959512_538897_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_788eeaf9.c: In function ‘queue_enqueue’:
./samples/SAFE/__tmp_788eeaf9.c:188:16: error: expected ‘;’ at end of input
  188 |     queue->size
      |                ^
      |                ;
./samples/SAFE/__tmp_788eeaf9.c:188:5: error: expected declaration or statement at end of input
  188 |     queue->size
      |     ^~~~~
